<resources>
    <string name="app_name">Where2Study</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_create_account">No account yet? Create one</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome_message">Where should I study today?</string>
    <string name="action_google_sign_in">Sign In With Google</string>

    <string name="prompt_name">Name</string>
    <string name="title_new_post">New Post</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="nav_google_maps">Search Google Maps</string>
    <string name="nav_locations">Study Locations</string>
    <string name="nav_board">Message Board</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="study_desc">Further Details</string>
    <string name="description">Extra Details</string>
    <string name="seats">Number of Seats</string>
    <string name="class_name">Class Studying For</string>
    <string name="Post">Post</string>
    <string name="change_location">Change Location</string>
    <string name="view_post">View Post</string>
    <string name="cancel">Cancel</string>

    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="title_activity_post_view_holder">PostViewHolder</string>


</resources>
