<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.where2study.NewPost">




    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/place_details"
            android:layout_marginStart="60dp"
            android:ems="10"
            android:hint="@string/end_time"
            android:inputType="time" />

        <EditText
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/end_time"
            android:layout_below="@+id/end_time"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/class_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/study_desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/class_name"
            android:layout_below="@+id/class_name"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/study_desc"
            android:inputType="textMultiLine" />

        <!-- <Button
            android:id="@+id/gmap_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/number_seats"
            android:layout_below="@+id/number_seats"
            android:layout_marginTop="19dp"
            android:text="@string/location" /> -->

        <Button
            android:id="@+id/create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:background="@color/postButtonColor"
            android:text="@string/Post" />

        <Button
            android:id="@+id/cancel_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/create_post"
            android:layout_alignTop="@+id/create_post"
            android:layout_marginTop="59dp"
            android:background="@color/cancel"
            android:text="@android:string/cancel" />

        <TextView
            android:id="@+id/place_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="14dp"
            android:text="TextView"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/number_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/study_desc"
            android:layout_below="@+id/study_desc"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/seats"
            android:inputType="number" />

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/number_seats"
            android:layout_below="@+id/number_seats"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName" />

    </RelativeLayout>


</ScrollView>