<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.where2study.HomeScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/welcome_message" />
    </LinearLayout>


    <Button
        android:id="@+id/home_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:text="@string/action_sign_in" />

    <Button
        android:id="@+id/home_sign_up_button"
        android:onClick="loadNewUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/action_create_account" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/action_about" />

</LinearLayout>
